# saints-xctf-auth

./: .gitignore  BUILD.bazel  Dockerfile  README.md  README.rst  SaintsXCTF_Auth.postman_collection.json  WORKSPACE.bazel  build.sh  docker-compose.yml  move.bzl
authenticate/: Dockerfile  README.rst  function.py  requirements.txt
authorizer/: Dockerfile  README.rst  function.py  requirements.txt
mock/: Dockerfile  Pipfile  README.rst  User.py  main.py  uwsgi.ini
rotate/: Dockerfile  README.md  README.rst  build.sh  function.py  requirements.txt
test/: README.rst  package-lock.json  package.json  test.js
token/: BUILD.bazel  Dockerfile  README.rst  User.py  build.sh  function.py  requirements.txt
