"""
Build file for the token lambda function Bazel package.
Author: Andrew Jarombek
Date: 6/3/2020
"""

sh_test(
    name = "generate_token_lambda_zip_file",
    srcs = ["build.sh"],
    args = ["token-lambda-dist"],
    tags = ["bash", "docker"]
)

sh_test(
    name = "generate_rotate_lambda_zip_file",
    srcs = ["build.sh"],
    args = ["rotate-lambda-dist"],
    tags = ["bash", "docker"]
)

sh_test(
    name = "generate_authorizer_lambda_zip_file",
    srcs = ["build.sh"],
    args = ["authorizer-lambda-dist"],
    tags = ["bash", "docker"]
)

sh_test(
    name = "generate_authenticate_lambda_zip_file",
    srcs = ["build.sh"],
    args = ["authenticate-lambda-dist"],
    tags = ["bash", "docker"]
)
